--- a/index.html
+++ b/index.html
@@ -3,9 +3,84 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>12_Tom</title>
+    <title>Colmar Academy</title>
+    <script src="http://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <h1>12-Ton-Colmar</h1>
+    <header class=" bg-white items-center h-[64px]">
+        <nav class="flex justify-center items-center pt-4">
+            <div class="flex gap-20">
+                <img src="/capstone_colmar_assets/./images/ic-logo.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
+                <img src="/capstone_colmar_assets/images/ic-on-campus.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
+                <img src="/capstone_colmar_assets/images/ic-online.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
+                <img src="/capstone_colmar_assets/images/ic-login.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
+            </div>
+        </nav>    
+    </header>
+    <main>
+         <!-- Hero -->
+        <section class="grid bg-[#dbdbdb] pb-[32px] lg:grid-cols-2 lg:items-center">
+            <div class="lg:flex justify-start">
+                <img 
+                src="/capstone_colmar_assets/images/banner.jpg" alt="student" class="class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 h-auto">
+                <h1 class="font-sans font-bold text-4xl text-[#4a4a4a] mt-[32px] ml-[16px]">Learn something new everyday</h1>
+                <p class="mt-[32px] ml-[16px] font-semibold text-xl text-[#font-semiboldi]">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
+            </div> 
+            <div class="flex justify-center mt-[24px] h-12">
+                <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy">
+                    Start here</a>
+                </button>
+            </div>    
+        </section>
+         <!-- Information -->
+        <section class="font-sans text-[14px] px-[16px] mt-[16px] mb-[32px] lg:flex">
+            <div class="mt-[16px]">
+                <img src="/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="student walking">
+                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Orientation date</h1>
+                <p class="text-l text-[#4a4a4a]">Tue 10/11 & Wed 10/12: 8am-3pm</p>
+                <p class="mt-1 hover:text-blue-400">Read more</p>
+            </div>
+            <div class="mt-[16px]">
+                <img src="/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="class room">
+                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Our campus</h1>
+                <p class="text-l text-[#4a4a4a]">Find which campus is close by you</p>
+                <p class="mt-1 hover:text-blue-400">Read more</p>
+            </div>
+            <div class="mt-[16px]">
+                <img src="/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" alt="class room">
+                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Spacial guest lecture</h1>
+                <p class=" text-[#4a4a4a]">Join a keynote with Oliver Sack about<br>music in medical treatment</p>
+                <p class="mt-1 hover:text-blue-400">Read more</p>
+            </div>
+            
+        </section>
+        <!-- Course -->
+        <section class="border-[1px]"> 
+            <h1 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Start learning</h1>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-[8px] md:gap-[8px] m-[16px] mb-[32px] font-semibold text-xl text-[#4a4a4a]">
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Software engineering </div>
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Computer art</div>
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Design</div>
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Data</div>
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Business</div>
+                <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Marketing</div>   
+            </div> 
+        </section>
+         <!-- Thesis -->
+        <section>
+            <h1 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Thesis exhibitions</h1>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-[8px] md:gap-[8px] m-[16px] mb-[32px] font-semibold text-xl text-[#4a4a4a]">
+                <video width="Auto-fit" height="Auto-fit" controls>
+                    <source src="/capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                  </video>
+        </section>  
+    </main>
+    <footer>
+        <div class="mt-[24px]">
+            <p class="my-[16px] ml-[16px]">© 2016 Colmar Academy.All rights reserved</p>
+        </div>
+    </footer>
+
 </body>
 </html>
