feat(file): updated mobile page

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <section>
             <h1 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Thesis exhibitions</h1>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-[8px] md:gap-[8px] m-[16px] mb-[32px] font-semibold text-xl text-[#4a4a4a]">
-                <video width="Auto-fit" height="Auto-fit" controls>
+                <video width="320" height="240" controls>
                     <source src="/capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
