--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <p class="mt-[32px] ml-[16px] font-semibold text-xl text-[#font-semiboldi]">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
             </div> 
             <div class="flex justify-center mt-[24px] h-12">
-                <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy">
+                <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy md:hidden"> 
                     Start here</a>
                 </button>
             </div>    
@@ -35,20 +35,20 @@
          <!-- Information -->
         <section class="font-sans text-[14px] px-[16px] mt-[16px] mb-[32px] lg:flex">
             <div class="mt-[16px]">
-                <img src="/components/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="student walking">
-                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Orientation date</h1>
+                <img src="/components/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="student-walking">
+                <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Orientation date</h2>
                 <p class="text-l text-[#4a4a4a]">Tue 10/11 & Wed 10/12: 8am-3pm</p>
                 <p class="mt-1 hover:text-blue-400">Read more</p>
             </div>
             <div class="mt-[16px]">
-                <img src="/components/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="class room">
-                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Our campus</h1>
+                <img src="/components/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="class-room">
+                <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Our campus</h2>
                 <p class="text-l text-[#4a4a4a]">Find which campus is close by you</p>
                 <p class="mt-1 hover:text-blue-400">Read more</p>
             </div>
             <div class="mt-[16px]">
-                <img src="/components/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" alt="class room">
-                <h1 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Spacial guest lecture</h1>
+                <img src="/components/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" alt="guest speaker">
+                <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Spacial guest lecture</h2>
                 <p class=" text-[#4a4a4a]">Join a keynote with Oliver Sack about<br>music in medical treatment</p>
                 <p class="mt-1 hover:text-blue-400">Read more</p>
             </div>
@@ -56,7 +56,7 @@
         </section>
         <!-- Course -->
         <section class="border-[1px]"> 
-            <h1 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Start learning</h1>
+            <h2 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Start learning</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-[8px] md:gap-[8px] m-[16px] mb-[32px] font-semibold text-xl text-[#4a4a4a]">
                 <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Software engineering </div>
                 <div class="p-6 bg-[#d8d8d8] text-left hover:bg-gray-800 hover:text-white">Computer art</div>
@@ -68,10 +68,10 @@
         </section>
          <!-- Thesis -->
         <section>
-            <h1 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Thesis exhibitions</h1>
+            <h2 class="flex justify-center font-sans text-[#4a4a4a] font-bold text-4xl mt-[32px] mb-[16px]">Thesis exhibitions</h2>
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-[8px] md:gap-[8px] m-[16px] mb-[32px] font-semibold text-xl text-[#4a4a4a]">
-                <video width="320" height="240" controls>
-                    <source src="/capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
+                <video width="w-full" height="h-full" controls>
+                    <source src="/components/capstone_colmar_assets/videos/thesis.mp4" type="video/mp4">
                   Your browser does not support the video tag.
                   </video>
         </section>  
