--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
         <section class="grid bg-[#dbdbdb] pb-[32px] lg:grid-cols-2 lg:items-center">
             <div class="lg:flex justify-start">
                 <img 
-                src="/components/capstone_colmar_assets/images/banner.jpg" alt="student" class="class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 h-auto">
+src="/components/capstone_colmar_assets/images/banner.jpg" alt="student" class="class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 h-auto">
                 <h1 class="font-sans font-bold text-4xl text-[#4a4a4a] mt-[32px] ml-[16px]">Learn something new everyday</h1>
                 <p class="mt-[32px] ml-[16px] font-semibold text-xl text-[#font-semiboldi]">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
             </div> 
             <div class="flex justify-center mt-[24px] h-12">
-                <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy md:hidden"> 
+                <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy"> 
                     Start here</a>
                 </button>
             </div>    
