--- a/index.html
+++ b/index.html
@@ -9,48 +9,47 @@
 <body>
     <header class=" bg-white items-center h-[64px]">
         <nav class="flex justify-center items-center pt-4">
-            <div class="flex gap-20">
+            <div class="flex gap-20 lg:hidden">
                 <img src="/components/capstone_colmar_assets/images/ic-logo.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
                 <img src="/components/capstone_colmar_assets/images/ic-on-campus.svg"w-full md:w-1/2 lg:w-1/3 h-auto">
                 <img src="/components/capstone_colmar_assets/images/ic-online.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
                 <img src="/components/capstone_colmar_assets/images/ic-login.svg" class="w-full md:w-1/2 lg:w-1/3 h-auto">
             </div>
-        </nav>    
+        </nav> 
     </header>
     <main>
          <!-- Hero -->
         <section class="grid bg-[#dbdbdb] pb-[32px] lg:grid-cols-2 lg:items-center">
-            <div class="lg:flex justify-start">
-                <img 
-src="/components/capstone_colmar_assets/images/banner.jpg" alt="student" class="class="w-full sm:w-2/3 md:w-1/2 lg:w-1/3 h-auto">
-                <h1 class="font-sans font-bold text-4xl text-[#4a4a4a] mt-[32px] ml-[16px]">Learn something new everyday</h1>
+            <div class="md:flex md:flex-col justify-start">
+                <img src="/components/capstone_colmar_assets/images/banner.jpg" alt="student" class="md:ml-[24px] md:mt-[32px]">
+                <h1 class="font-sans font-bold text-4xl text-[#4a4a4a] mt-[32px] ml-[16px] md:flex flex-col md:ml-[24px]">Learn something new everyday</h1>
                 <p class="mt-[32px] ml-[16px] font-semibold text-xl text-[#font-semiboldi]">Lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</p>
             </div> 
-            <div class="flex justify-center mt-[24px] h-12">
+            <div class="flex justify-center mt-[24px] h-12 md:ml-[24px]">
                 <button class="bg-[#9b9b9b] font-bold text-white w-full mx-[16px]  hover:bg-gray-800"><a href="https://www.codecademy.com/paths/learn-how-to-build-websites/tracks/learn-how-to-build-websites-capstone-project/modules/colmar-academy/projects/colmar-academy"> 
                     Start here</a>
                 </button>
             </div>    
         </section>
          <!-- Information -->
-        <section class="font-sans text-[14px] px-[16px] mt-[16px] mb-[32px] lg:flex">
+        <section class="font-sans text-[14px] px-[16px] mt-[16px] mb-[32px] lg:flex flex-col ">
             <div class="mt-[16px]">
                 <img src="/components/capstone_colmar_assets/images/information-orientation-mobile.jpg" alt="student-walking">
                 <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Orientation date</h2>
                 <p class="text-l text-[#4a4a4a]">Tue 10/11 & Wed 10/12: 8am-3pm</p>
-                <p class="mt-1 hover:text-blue-400">Read more</p>
+                <p class="mt-1 text-blue-400 hover:text-blue-600">Read more</p>
             </div>
             <div class="mt-[16px]">
                 <img src="/components/capstone_colmar_assets/images/information-campus-mobile.jpg" alt="class-room">
                 <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Our campus</h2>
                 <p class="text-l text-[#4a4a4a]">Find which campus is close by you</p>
-                <p class="mt-1 hover:text-blue-400">Read more</p>
+                <p class="mt-1 text-blue-400 hover:text-blue-600">Read more</p>
             </div>
             <div class="mt-[16px]">
                 <img src="/components/capstone_colmar_assets/images/information-guest-lecture-mobile.jpg" alt="guest speaker">
                 <h2 class="font-semibold text-2xl text-[#4a4a4a] mt-[16px]">Spacial guest lecture</h2>
                 <p class=" text-[#4a4a4a]">Join a keynote with Oliver Sack about<br>music in medical treatment</p>
-                <p class="mt-1 hover:text-blue-400">Read more</p>
+                <p class="mt-1 text-blue-400 hover:text-blue-600">Read more</p>
             </div>
             
         </section>
